Fixed MAGETWO-17338: Adjust layout of jQuery popup dialog - Moved the jQuery dialog buttons to the lower right corner. - Added a break to the permissions template to add whitespace.

--- a/app/code/Magento/Integration/view/adminhtml/integration.css
+++ b/app/code/Magento/Integration/view/adminhtml/integration.css
@@ -54,3 +54,11 @@
     cursor: not-allowed;
     opacity: 0.6;
 }
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+    float: none;
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+    text-align: right;
+}
